--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
                 <div class="flex gap-3.5">
                     <a href="./home">Home</a>
                     <a href="./aboutus.html">About Us</a>
-                    <a href="./contact">Contact Us</a>
+                    <a href="./contactus.html">Contact Us</a>
                 </div>
             </div>
         </nav>
